[project]
name = "learnlangflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.58.0",
    "easyocr>=1.7.2",
    "fastapi>=0.120.0",
    "flask>=3.1.2",
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gtts>=2.5.4",
    "httpx>=0.27.2",
    "langflow>=1.6.5",
    "ngrok>=1.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "twilio>=9.8.5",
    "uvicorn>=0.38.0",
]
